--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
-    "@tsconfig/svelte": "^2.0.1",
-    "sass": "^1.53.0",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.7",
+    "@sveltejs/vite-plugin-svelte": "^1.0.9",
+    "@tsconfig/svelte": "^3.0.0",
+    "sass": "^1.55.0",
+    "svelte": "^3.51.0",
+    "svelte-check": "^2.9.2",
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.3.1",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.9"
+    "typescript": "^4.8.4",
+    "vite": "^3.1.7"
   },
   "dependencies": {
-    "svelte-navigator": "^3.1.6"
+    "svelte-navigator": "^3.2.2"
   }
 }
